# MkMarkov

./: .gitignore  Cargo.toml  README.md  collect_all_notes.py
src/: create_markov_data.rs  markov_lib.rs  simulate_by_markov_chain.rs
